<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetailFragment"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_string"
        android:textAlignment="center"
        android:layout_marginTop="25sp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/home_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_string"/>

    <TextView
        android:id="@+id/homePhone_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginBottom="40dp"
        android:paddingLeft="25sp"/>

    <TextView
        android:id="@+id/cell_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cell_string" />

    <TextView
        android:id="@+id/cellPhone_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginBottom="40dp"
        android:paddingLeft="25sp"/>

    <TextView
        android:id="@+id/workString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_string" />

    <TextView
        android:id="@+id/workPhone_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginBottom="40dp"
        android:paddingLeft="25sp"/>

    <TextView
        android:id="@+id/emailString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_string" />

    <TextView
        android:id="@+id/email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:paddingLeft="25sp"/>


</LinearLayout>